# hawkes_rag

./: .gitignore  LICENSE  README.md  architecture-visualization.md  discussion.md  idea_description.md  memory-system-design-v3.md  memorystructure.md  originidea.md  pyproject.toml  requirements-agent-harness.txt
benchmarks/: README.md
benchmarks/locomo/: download.py  run_locomo.py  run_locomo_plus.py  run_originidea_sessions.py  sweep_locomo_plus_fusion.py  sweep_originidea_sessions.py
benchmarks/longmemeval/: README.md  analyze_cross_evidence.py  compute_frequent_wltl_session_vectors.py  dataset_stats.md  download.py  plot_sweep_results.py  run_agent_harness.py  run_hawkes_eval.py  run_originidea_sessions.py  run_originidea_turns.py  sweep_originidea_sessions.py  trace_originidea_one_question.py
benchmarks/statistics/: CODEX_DATASET_GENERATION.md  sweep_hawkes.py  (+3 more)
docs/: design.md  theory.md
examples/: 01_basic_usage.py  02_synthetic_recovery.py  03_visualize_decay.py  04_mechanism_demo.py  05_chat_with_memory.py  06_locomo_eventization.py  cross_excitation_demo.py
hawkes_agent/: __init__.py  adoption.py  clock.py  config.py  dynamics.py  graph.py  llm.py  memory.py  recall.py  rerank.py
hawkes_rag/: __init__.py  core.py  embeddings.py  estimation.py  evaluation.py  gpu.py  locomo.py  memory.py  retrieval.py  utils.py  viz.py
reports/: originidea_initial_experiment_report.md
scripts/: README.md  visualize_sweep_summary_md.py
tests/: test_core.py  test_estimation.py  test_evaluation.py  test_locomo.py  test_memory.py
thesis/: related_papers.md
(+119 files in other folders)
