[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkes-rag"
version = "0.1.0"
description = "Self-exciting memory for retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hawkes-RAG contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
embeddings = ["sentence-transformers>=2.7"]
llm = ["openai>=1.0", "anthropic>=0.34"]

[tool.setuptools.packages.find]
include = ["hawkes_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
